workloads/default/api/templates/api.vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: api
  namespace: default

spec:
  gateways: ["primary.istio-system"]
  hosts: ["api-origin.stevenxie.me"]
  http:
    - route:
        - destination:
            host: api
          headers:
            response:
              set:
                X-Service: api-origin
